--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,21 @@
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.9.8</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.8</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+    <version>5.1.6.RELEASE</version>
+</dependency>
+		
 
 	</dependencies>
 
