--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
 	<artifactId>BookLibraryApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>BookLibraryApplication</name>
-	<description>Demo project for Spring Boot</description>
+	<description>BookLibraryApplication REST API</description>
 	
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -26,11 +26,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
 	  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
